@@ -1,0 +1,7 @@
+package deco.block.blocks;
+
+public class PodzolSlabBlock extends CoarseDirtSlabBlock {
+	public PodzolSlabBlock(int blockID) {
+		super(blockID);
+	}
+}
