@@ -10,6 +10,8 @@
     - Hazel saplings require an oak sapling, brown dye, and a fertilizer
 - Changed red sand (blocks and piles) to be a subtype of regular sand. Old red sand may be converted into new red sand in a crafting grid.
 - Changed red sand to be crafted with 8 sand and 1 red dye.
+- Changed the recipe for coarse dirt to produce 2.
+- Changed the recipe for podzol to be 8 coarse dirt and a spruce leaf block to make 8.
 - Removed the ability to play custom sounds. This will return in a future release, but for now the code was too messy to carry over through the rewrite.
 - Removed wood bleach and wood stain.
 - Changed the recipe for empty bottle racks to use an 'I' shape instead of an 'X' (high efficiency recipe uses siding on top and bottom and moulding everywhere else).
@@ -17,3 +19,4 @@
 - Fixed an issue where addon leaves would not properly decay until updated.
 - Fixed an issue where addon trees would generate two stumps when smashing a planter.
 - Fixed an issue where the top and bottom textures of pergolas would not properly rotate with the model.
+- Fixed an issue where saplings could not grow on coarse dirt.
